--- a/vue-project-starting_file/index.html
+++ b/vue-project-starting_file/index.html
@@ -13,28 +13,32 @@
   </head>
 
   <body>
-
-    <nav>
-      <div class="nav-container">
-        <div id="logo">
-          <img src="./assets/img/wish-logo-800.png" alt="logo" />
+    
+    <div id="app">
+      <nav>
+        <div class="nav-container">
+          <div id="logo">
+            <img src="./assets/img/wish-logo-800.png" alt="logo" />
+          </div>
+  
+          <ul id="icons">
+            <li>
+              <i class="fas fa-user"></i>
+            </li>
+            <li>
+              <i class="fas fa-heart"></i>
+              <span id="nav-notif"></span>
+            </li>
+            <li>
+              <i class="fas fa-shopping-cart"></i>
+            </li>
+          </ul>
         </div>
+      </nav>
+    </div>
 
-        <ul id="icons">
-          <li>
-            <i class="fas fa-user"></i>
-          </li>
-          <li>
-            <i class="fas fa-heart"></i>
-            <span id="nav-notif"></span>
-          </li>
-          <li>
-            <i class="fas fa-shopping-cart"></i>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="assets/js/vue.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
