--- a/vue-project-starting_file/index.html
+++ b/vue-project-starting_file/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    
+
     <div id="app">
       <nav>
         <div class="nav-container">
@@ -38,6 +38,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="assets/js/vue.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
