--- a/vue-project-starting_file/index.html
+++ b/vue-project-starting_file/index.html
@@ -35,6 +35,8 @@
           </ul>
         </div>
       </nav>
+      
+      <router-view></router-view>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
