--- a/vue-project-starting_file/index.html
+++ b/vue-project-starting_file/index.html
@@ -47,6 +47,28 @@
       <router-view></router-view>
     </div>
 
+    <script type="text/x-template" id='home'>
+      <div class="home-container">
+        <h1>Articles</h1>
+        <!-- Search Display -->
+
+        <!-- cards diplay -->
+        <div class="card-cart-container">
+          <div class="card-container">
+            <div v-for="product in products" class="card">
+              <div class="img-container">
+                <img v-bind:src="product.img">
+              </div>
+              <div class="card-text">
+                <h3>{{ product.description }}</h3>
+                <span>{{ product.price }}</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="assets/js/vue.js"></script>
